--- a/mvc/onlineSite/onlineSite/Views/Home/Index.cshtml
+++ b/mvc/onlineSite/onlineSite/Views/Home/Index.cshtml
@@ -16,6 +16,8 @@
                 <li>@Html.ActionLink("Login", "CreateLogin", "online")</li>
                 <li>@Html.ActionLink("Registration", "Create", "online")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("product", "productView", "online")</li>
+
             </ul>
         </div>
     </div>
