--- a/mvc/onlineSite/onlineSite/Views/Shared/_Layout.cshtml
+++ b/mvc/onlineSite/onlineSite/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -12,7 +13,7 @@
     @Styles.Render("~/Content/css/custom.css")
 </head>
 <body>
-   
+
     <div class="container body-content">
         @RenderBody()
         <hr />
