--- a/mvc/onlineSite/onlineSite/Views/online/Index.cshtml
+++ b/mvc/onlineSite/onlineSite/Views/online/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<onlineSite.Models.customer_reg>
+    @using onlineSite.Models;
 
 @{
     ViewBag.Title = "Index";
@@ -42,15 +43,23 @@
                     </div>
                 </div>
             </div>
+            <div><p>Welcome @ViewBag.user</p></div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="custom-select-box">
                     <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-                        <option>¥ JPY</option>
-                        <option>$ USD</option>
+                        <option>€ EUR</option>
+                        <option>€ EUR </option>
+                        
                         <option>€ EUR</option>
                     </select>
                 </div>
                 <div class="right-phone-box">
+                    <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
+                        <option>@DateTime.Now</option>
+                        <option> @ViewBag.dateTime</option>
+
+                        
+                    </select>
                     <p>Call US :- <a href="#"> +11 900 800 100</a></p>
                 </div>
                 <div class="our-link">
@@ -174,25 +183,19 @@
             <a href="#" class="close-side"><i class="fa fa-times"></i></a>
             <li class="cart-box">
                 <ul class="cart-list">
-                    <li>
-                        <a href="#" class="photo"><img src="~/Content/images/img-pro-01.jpg" class="cart-thumb" alt="" /></a>
-                        <h6><a href="#">Delica omtantur </a></h6>
-                        <p>1x - <span class="price">$80.00</span></p>
-                    </li>
-                    <li>
-                        <a href="#" class="photo"><img src="~/Content/images/img-pro-02.jpg" class="cart-thumb" alt="" /></a>
-                        <h6><a href="#">Omnes ocurreret</a></h6>
-                        <p>1x - <span class="price">$60.00</span></p>
-                    </li>
-                    <li>
-                        <a href="#" class="photo"><img src="~/Content/images/img-pro-03.jpg" class="cart-thumb" alt="" /></a>
-                        <h6><a href="#">Agam facilisis</a></h6>
-                        <p>1x - <span class="price">$40.00</span></p>
-                    </li>
-                    <li class="total">
-                        <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
-                        <span class="float-right"><strong>Total</strong>: $180.00</span>
-                    </li>
+                    @*@foreach (var item in (List<Item>)Session["cart"])
+                    {
+                        <li>
+                            <a href="#" class="photo"><img src="~/Image/@item.pro.p_img" class="cart-thumb" alt="" /></a>
+                            <h6><a href="#">@item.pro.p_name </a></h6>
+                            <p>1x - <span class="price">@item.pro.product_price</span></p>
+                        </li>
+                    }*@
+                <li class="total">
+                    <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
+                    <span class="float-right"><strong>Total</strong>: $180.00</span>
+                </li>
+
                 </ul>
             </li>
         </div>
